# chef_umami

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  logging_config.yaml  pyproject.toml
tgbot/: bot.py  config.py  loader.py  main.py
tgbot/handlers/: __init__.py  help.py  start.py  user.py
tgbot/messages/: ru.py
tgbot/services/: admins_notify.py
umami_bot/: .env.example  Dockerfile  logging_config.yaml  pyproject.toml
umami_bot/src/app/: config.py  loader.py  main.py
umami_bot/src/app/handlers/: __init__.py  help.py  start.py  user.py
umami_bot/src/app/messages/: ru.py
umami_service/: .env.example  Dockerfile  alembic.ini  config.py  logging_config.yaml  main.py  pyproject.toml
umami_service/middlewares/: logging.py
umami_service/migrations/: env.py  script.py.mako
umami_service/migrations/versions/: 57e0063e0dc0_database_creation.py  7c7c869c3566_ingredient_name_unique_constraint.py  a4e5498024c3_1_unique_constraints.py
umami_service/scripts/: start_app.sh
umami_service/src/app/: __init__.py  config.py  loader.py  main.py
umami_service/src/app/api/: __init__.py
umami_service/src/app/api/v1/: __init__.py
umami_service/src/app/api/v1/endpoints/: receipe.py  recipe.py
umami_service/src/app/config/: common.py  db.py
umami_service/src/app/core/: config.py  dependencies.py  loader.py
umami_service/src/app/db/: config.py  const.py
umami_service/src/app/db/models/: __init__.py  base.py  ingredient.py  recipe.py  recipe_ingredient.py  unit.py
umami_service/src/app/db/sql/: create_recipe.sql
umami_service/src/app/middlewares/: logging.py
umami_service/src/app/models/: receipe.py
umami_service/src/app/schemas/: __init__.py  ingredient.py  receipe.py  recipe.py  unit.py
