[tool.poetry]
name = "chef_umami"
version = "0.1.0"
description = "telegram culinary bot"
authors = ["petryanin <aspetryanin@gmail.com>"]

[tool.poetry.dependencies]
python = "3.11.5"
aiogram = "^3.0.0"
pre-commit = "^3.3.3"
fastapi = "^0.103.0"
SQLAlchemy = "^2.0.20"
ruff = "^0.0.286"
black = "^23.7.0"
pydantic-settings = "^2.0.3"
colorlog = "^6.7.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
alembic = "^1.12.0"
asyncpg = "^0.28.0"
reorder-python-imports = "^3.12.0"
aioredis = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.6.1"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
select = ["D", "E", "F", "W", "N", "C", "B", "RUF100"]
ignore = [
    "B008",
    "D200",
    "D202",
    "D203",
    "D205",
    "D210",
    "D212",
    "D213",
    "D400",
    "D406",
    "D407",
    "D415",
    "N815",
]
exclude = [
    "versions",
]
